--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,28 @@ nav {
     background-color: cornflowerblue;
   }
 
-nav {
-    
+.button{
+    background-color: #404464;
+    border-radius: 8px;
+    color: white;
+    text-align: center;
+    padding: 20px 32px;
+    width: 250px;
+    height: 60px;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: sans-serif;
+}
+
+.loginButton {
+    border: 2px solid #404464;
+    border-radius: 8px;
+    color: #404464;
+    text-align: center;
+    padding: 20px 32px;
+    width: 150px;
+    height: 65px;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: sans-serif;
 }
