--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
+    color:#3f4769;
+    font-size: 30px;
+    font-weight: bold;
   }
   
 
 nav {
     width: 100%;
     height: 50px;
-    background-color: cornflowerblue;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 10px;
+   
   }
 
 .button{
@@ -35,4 +43,11 @@ nav {
     font-weight: bold;
     font-size: 20px;
     font-family: sans-serif;
+}
+
+section {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
