--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     color:#3f4769;
     font-size: 30px;
     font-weight: bold;
+    background-color: #fcfcf4;
   }
   
 
@@ -50,4 +51,16 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+footer{
+    background-color: #fbfbc3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+li {
+    list-style-type: none;
+    background-color: #fbfbc3;
 }
