--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,10 @@
     box-sizing: border-box;
     font-family: sans-serif;
     color:#3f4769;
-    font-size: 30px;
+    font-size: 27px;
     font-weight: bold;
     background-color: #fcfcf4;
+    text-align: center;
   }
   
 
@@ -51,6 +52,8 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 footer{
@@ -63,4 +66,8 @@ footer{
 li {
     list-style-type: none;
     background-color: #fbfbc3;
+}
+
+.firstSection{
+    justify-content: space-between;
 }
