--- a/styles.css
+++ b/styles.css
@@ -48,24 +48,36 @@ nav {
 }
 
 section {
-    margin-top: 100px;
+    margin-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: 30px;
     margin-right: 30px;
+    margin-bottom: 80px;
 }
 
 footer{
-    background-color: #fbfbc3;
+    
+    background-color: #f6f6c6;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: space-around;
 }
 
-li {
+
+
+ul {
     list-style-type: none;
-    background-color: #fbfbc3;
+    background-color: #f6f6c6;
+}
+
+footer li {
+    background-color: #f6f6c6;
+    font-size: 25px;
+    font-weight: 600;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .firstSection{
