--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: sans-serif;
     color:#3f4769;
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 600;
     background-color: #fcfcf4;
     text-align: center;
@@ -51,7 +51,7 @@ section {
     margin-top: 20px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 80px;
@@ -80,9 +80,7 @@ footer li {
     margin-bottom: 30px;
 }
 
-.firstSection{
-    justify-content: space-between;
-}
+
 
 .blueText{
     color:#1dbcf3;
