--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,9 @@ nav {
     height: 50px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-left: 10px;
+    justify-content: space-between; 
+    margin-left: 30px;
+
    
   }
 
@@ -26,11 +27,11 @@ nav {
     border-radius: 8px;
     color: white;
     text-align: center;
-    padding: 20px 32px;
-    width: 250px;
-    height: 60px;
+    padding: 30px;
+    width: 375px;
+    height: 90px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 30px;
     font-family: sans-serif;
 }
 
@@ -39,12 +40,11 @@ nav {
     border-radius: 8px;
     color: #404464;
     text-align: center;
-    padding: 20px 32px;
-    width: 150px;
-    height: 65px;
+    padding: 30px;
+    width: 170px;
+    height: 90px;
     font-weight: bold;
-    font-size: 20px;
-    font-family: sans-serif;
+    font-size: 30px;
 }
 
 section {
@@ -84,10 +84,15 @@ footer li {
 
 .blueText{
     color:#1dbcf3;
-    font-size: 38px;
+    font-size: 46px;
 }
 
 .smallText{
-    font-size: 22px;
+    font-size: 26px;
     font-weight: 400
+}
+
+h1 {
+    font-size: 39px;
+    font-weight: 600;
 }
