--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ nav {
     align-items: center;
     justify-content: space-between; 
     margin-left: 30px;
-
+    margin-top: 20px;
    
   }
 
@@ -63,6 +63,7 @@ footer{
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
+    
 }
 
 
@@ -95,4 +96,11 @@ footer li {
 h1 {
     font-size: 39px;
     font-weight: 600;
+}
+
+.centerText{
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+
 }
