--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
+
+
 * {
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
     color:#3f4769;
     font-size: 28px;
     font-weight: 600;
@@ -32,10 +34,10 @@ nav {
     height: 90px;
     font-weight: bold;
     font-size: 30px;
-    font-family: sans-serif;
 }
 
 .loginButton {
+    font-family: 'Roboto', sans-serif;
     border: 2px solid #404464;
     border-radius: 8px;
     color: #404464;
